
  * Added support to m3u, pls, xspf radio playlists
  * Added user defined radios
  * Fixed bug with cmake 2.8.0
  * Added posibility in progressbar to show counters instead of percent

2009-11-27 0.2.1
  * Fixed bug with lengths of the podcasts in some cases
  * The album sort by year only affects now to the Albums list box
  * Added option to change order of songs in the track editor
  * Fixed bug restoring saved position and current track index in playlist
  * Added reload button in lyrics and last.fm panels
  * Allow filters in the new podcasts dialog
  * Now can select from a podcast directory "digitalpodcast.com" when adding a new podcast
  * Limited the length of the description in the podcast channel editor
  * Fixed bug when the file path had some chars for ex. %
  * Fixed bug loading tags from songs that didnt exist in library
  * Fixed loading saved radiostations playlists
  * Paint podcasts in playlist with length, author and channel
  * Progressbars in statusbar with labels
  * Fixed bug creating the podcast default dir
  * Fixed bug deleting old podcasts

2009-11-05 0.2.0
  * Fixed LyricWiki lyric search engine
  * Added support for Podcasts
  * Only allow to select one radiostation
  * Added support for musicbrainz searchs in Track Editor. Its Album
    oriented. Can search for tracks even when no metadata is not found
    using audio fingerprint. Leave empty artist and title fields for this.
  * Added partial support to gnome session. Now save playlist when session is ended
  * Added support for Discogs cover download. See www.discogs.com
  * Added cd universe lyric search
  * Fixed drop files after any element in the player playlist
  * Added option in Album list box to select a cover file from disk
  * Fixed the amazon cover download
  * In Player Playlist selection is cancelled when new playlist is set
  * Added support to ape file format.
  * Added support to mp4 using libmp4 library. Need libmp4v2 installed